upgrade to java 21 (#199)
* Create maven.yml

upgrade github actions

* adding sonar analysis to action

* upgrade google formatter for java 21

* update formatting for google formatter

* [issue #197] - upgrade to java 21