@@ -60,7 +60,7 @@ class MPDPlaylistTestGenreAndYear {
     verify(commandExecutor, times(2))
         .sendCommand(stringArgumentCaptor.capture(), stringArgumentCaptor.capture());
 
-    assertEquals(realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().get(0));
+    assertEquals(realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().getFirst());
     assertEquals("file1", stringArgumentCaptor.getAllValues().get(1));
     assertEquals(realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().get(2));
     assertEquals("file2", stringArgumentCaptor.getAllValues().get(3));
@@ -84,7 +84,7 @@ class MPDPlaylistTestGenreAndYear {
     verify(commandExecutor, times(2))
         .sendCommand(stringArgumentCaptor.capture(), stringArgumentCaptor.capture());
 
-    assertEquals(realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().get(0));
+    assertEquals(realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().getFirst());
     assertEquals("file1", stringArgumentCaptor.getAllValues().get(1));
     assertEquals(realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().get(2));
     assertEquals("file2", stringArgumentCaptor.getAllValues().get(3));
@@ -134,7 +134,7 @@ class MPDPlaylistTestGenreAndYear {
         .sendCommand(stringArgumentCaptor.capture(), integerArgumentCaptor.capture());
 
     assertEquals(realPlaylistProperties.getRemoveId(), stringArgumentCaptor.getAllValues().get(1));
-    assertEquals((Integer) song1.getId(), integerArgumentCaptor.getAllValues().get(0));
+    assertEquals((Integer) song1.getId(), integerArgumentCaptor.getAllValues().getFirst());
     assertEquals(realPlaylistProperties.getRemoveId(), stringArgumentCaptor.getAllValues().get(2));
     assertEquals((Integer) song2.getId(), integerArgumentCaptor.getAllValues().get(1));
     assertEquals(PlaylistChangeEvent.Event.SONG_DELETED, changeEvent[0].getEvent());
@@ -173,7 +173,7 @@ class MPDPlaylistTestGenreAndYear {
         .sendCommand(stringArgumentCaptor.capture(), integerArgumentCaptor.capture());
 
     assertEquals(realPlaylistProperties.getRemoveId(), stringArgumentCaptor.getAllValues().get(1));
-    assertEquals((Integer) song1.getId(), integerArgumentCaptor.getAllValues().get(0));
+    assertEquals((Integer) song1.getId(), integerArgumentCaptor.getAllValues().getFirst());
     assertEquals(realPlaylistProperties.getRemoveId(), stringArgumentCaptor.getAllValues().get(2));
     assertEquals((Integer) song2.getId(), integerArgumentCaptor.getAllValues().get(1));
     assertEquals(PlaylistChangeEvent.Event.SONG_DELETED, changeEvent[0].getEvent());
@@ -196,7 +196,7 @@ class MPDPlaylistTestGenreAndYear {
     verify(commandExecutor, times(2))
         .sendCommand(stringArgumentCaptor.capture(), stringArgumentCaptor.capture());
 
-    assertEquals(realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().get(0));
+    assertEquals(realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().getFirst());
     assertEquals("file1", stringArgumentCaptor.getAllValues().get(1));
     assertEquals(realPlaylistProperties.getAdd(), stringArgumentCaptor.getAllValues().get(2));
     assertEquals("file2", stringArgumentCaptor.getAllValues().get(3));
@@ -236,7 +236,7 @@ class MPDPlaylistTestGenreAndYear {
         .sendCommand(stringArgumentCaptor.capture(), integerArgumentCaptor.capture());
 
     assertEquals(realPlaylistProperties.getRemoveId(), stringArgumentCaptor.getAllValues().get(1));
-    assertEquals((Integer) song1.getId(), integerArgumentCaptor.getAllValues().get(0));
+    assertEquals((Integer) song1.getId(), integerArgumentCaptor.getAllValues().getFirst());
     assertEquals(realPlaylistProperties.getRemoveId(), stringArgumentCaptor.getAllValues().get(2));
     assertEquals((Integer) song2.getId(), integerArgumentCaptor.getAllValues().get(1));
     assertEquals(PlaylistChangeEvent.Event.SONG_DELETED, changeEvent[0].getEvent());
